--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -5,12 +5,12 @@ $base-color: #000928 !default;
 $secondary-color: #7254dc !default;
 
 $background-color: $base-color;
-$background-color-darker: #00080f !default;
+$background-darker-color: #00080f !default;
 
 $accent-color: #00b0ff !default;
 
 $code-background-color: #00080f !default;
 
-$text-color-alt: #ff31b9 !default;
+$text-secondary-color: #ff31b9 !default;
 $text-color: #adfff5 !default;
 $header-text-color: #0ad276 !default;
