--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -1,16 +1,16 @@
 // ----------------------------------------------------------------------------
 // corbs theme
 // ----------------------------------------------------------------------------
-$base-color: #030f4b !default;
+$base-color: #04147e !default;
 $secondary-color: #342077 !default;
 
-$background-color: $base-color;
-$background-color-darker: #040a2e !default;
+$background-color: #030f4b;
+$background-darker-color: #020827 !default;
 
 $accent-color: #00b0ff !default;
 
-$code-background-color: #060E3F !default;
+$code-background-color: #061039 !default;
 
-$text-color-alt: #c21d8a !default;
+$text-secondary-color: #c21d8a !default;
 $text-color: #ff31b9 !default;
 $header-text-color: #00e5ff !default;
