--- a/_sass/yolo/themes/_dracula.scss
+++ b/_sass/yolo/themes/_dracula.scss
@@ -5,12 +5,12 @@ $base-color: #282a37 !default;
 $secondary-color: #452ca4 !default;
 
 $background-color: $base-color;
-$background-color-darker: #16181d !default;
+$background-darker-color: #16181d !default;
 
 $accent-color: #39ffea !default;
 
 $code-background-color: #16181d !default;
 
-$text-color-alt: #fe74bb !default;
+$text-secondary-color: #fe74bb !default;
 $text-color: #f4f4ef !default;
 $header-text-color: #957cff !default;
