--- a/_sass/yolo/themes/_monokai.scss
+++ b/_sass/yolo/themes/_monokai.scss
@@ -5,12 +5,12 @@ $base-color: #2d292d !default;
 $secondary-color: #a57af2 !default;
 
 $background-color: $base-color;
-$background-color-darker: #151315 !default;
+$background-darker-color: #151315 !default;
 
 $accent-color: #a9dd76 !default;
 
 $code-background-color: #151315 !default;
 
-$text-color-alt: #ffd966 !default;
+$text-secondary-color: #ffd966 !default;
 $text-color: #79dce8 !default;
 $header-text-color: #ff6288 !default;
