--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -1,181 +1,20 @@
-<div class="columns">
-    <div class="column is-half">
-        <div class="cell white">
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell secondary-color">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell background-color">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell background-color-darker">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell accent-color">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell code-background-color">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell text-color-alt">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell text-color">&nbsp;</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell header=text-color">&nbsp;</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="column is-half">
-        <div class="cell default">
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">base-color</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">secondary-color</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">background-color</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">background-color-darker</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">accent-color</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">code-background-color</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">text-color-alt</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">text-color</div>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-full">
-                    <div class="cell base-color">header-text-color</div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="column">
+    <div class="cell is-circle-64 base-color">&nbsp;</div>
+    <p>base-color</p>
+    <div class="cell is-circle-64 secondary-color">&nbsp;</div>
+    <p>secondary-color</p>
+    <div class="cell is-circle-64 background-color">&nbsp;</div>
+    <p>background-color</p>
+    <div class="cell is-circle-64 background-darker-color">&nbsp;</div>
+    <p>background-darker-color</p>
+    <div class="cell is-circle-64 accent-color">&nbsp;</div>
+    <p>accent-color</p>
+    <div class="cell is-circle-64 code-background-color">&nbsp;</div>
+    <p>code-background-color</p>
+    <div class="cell is-circle-64 text-color">&nbsp;</div>
+    <p>text-color</p>
+    <div class="cell is-circle-64 text-secondary-color">&nbsp;</div>
+    <p>text-secondary-color</p>
+    <div class="cell is-circle-64 header-text-color">&nbsp;</div>
+    <p>header-text-color</p>
 </div>
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell base-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">base-color</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell secondary-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">secondary-color</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell background-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">background-color</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell background-color-darker">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">background-color-darker</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell accent-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">accent-color</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell code-background-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">code-background-color</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell text-color-alt">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">text-color-alt</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell text-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">text-color</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="columns">-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell header-text-color">&nbsp;</div>-->
-<!--    </div>-->
-<!--    <div class="column is-half">-->
-<!--        <div class="cell default">header-text-color</div>-->
-<!--    </div>-->
-<!--</div>-->
