--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     </a>
     {% endif %}
     <h1><a href="./">{{ site.tag_text }}</a></h1>
-    <h4 class="subtitle">{{ site.description }}</h4>
+    <h4 class="is-italic">{{ site.description }}</h4>
     <p>
         <span>
           {% for tag in page.tags %}
