--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -2,10 +2,11 @@
 // Base elements stylesheet
 // ----------------------------------------------------------------------------
 html {
-  font: 16px/1.5 $base-font-family, sans-serif;
+  font: 16px/1.5 $family-primary, sans-serif;
 }
 
-@media (min-width: 40rem) {
+// When the minimum screen width is 640px or wider then the font-size of the paragraph will change to 20px.
+@media (min-width: 640px) {
   html {
     font-size: 20px;
   }
@@ -15,12 +16,6 @@ body {
   margin: 2rem 0 5rem;
   color: $text-color;
   background-color: $background-color;
-}
-
-@media (min-width: 40rem) {
-  body {
-    margin-top: 3rem;
-  }
 }
 
 a {
@@ -33,8 +28,8 @@ a:hover, a:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $secondary-font-family, sans-serif;
-  margin: 0 0 0.5rem -0.1rem /* align left edge */;
+  font-family: $family-secondary, sans-serif;
+  margin: 0 0 0.5rem 0rem;
   line-height: 1;
   color: $text-color;
   text-rendering: optimizeLegibility;
@@ -104,7 +99,7 @@ blockquote {
   margin-right: 0;
   padding: .5rem 1rem;
   border-left: .25rem solid $text-color;
-  color: $text-color-alt;
+  color: $text-secondary-color;
 }
 
 blockquote p:last-child {
