--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -18,8 +18,44 @@ $base0d: #AB8DF8 !default;
 $base0e: #EA4BA6 !default;
 $base0f: #C1291C !default;
 // ----------------------------------------------------------------------------
-// Fonts
+// Typography
 // ----------------------------------------------------------------------------
-$base-font-family: "Inconsolata", sans-serif !default;
-$secondary-font-family: "Montserrat", sans-serif !default;
-$monospace-font-family: "Inconsolata", monospace !default;
+$family-primary: "Inconsolata", sans-serif !default;
+$family-secondary: "Montserrat", sans-serif !default;
+$family-monospace: "Source Code Pro", monospace !default;
+$family-code: $family-monospace;
+
+$size-1: 3rem !default;
+$size-2: 2.5rem !default;
+$size-3: 2rem !default;
+$size-4: 1.5rem !default;
+$size-5: 1.25rem !default;
+$size-6: 1rem !default;
+$size-7: 0.75rem !default;
+
+$weight-light: 300 !default;
+$weight-normal: 400 !default;
+$weight-medium: 500 !default;
+$weight-semibold: 600 !default;
+$weight-bold: 700 !default;
+// ----------------------------------------------------------------------------
+// Flags
+// ----------------------------------------------------------------------------
+$variable-columns: true !default;
+$rtl: false !default;
+// ----------------------------------------------------------------------------
+// Responsiveness
+// ----------------------------------------------------------------------------
+// The container horizontal gap, which acts as the offset for breakpoints
+$gap: 32px !default;
+// 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
+$tablet: 769px !default;
+// 960px container + 4rem
+$desktop: 960px + (2 * $gap) !default;
+// 1152px container + 4rem
+$widescreen: 1152px + (2 * $gap) !default;
+$widescreen-enabled: true !default;
+// 1344px container + 4rem
+$fullhd: 1344px + (2 * $gap) !default;
+$fullhd-enabled: true !default;
+$breakpoints: ("mobile": ("until": $tablet), "tablet": ("from": $tablet), "tablet-only": ("from": $tablet, "until": $desktop), "touch": ("from": $desktop), "desktop": ("from": $desktop), "desktop-only": ("from": $desktop, "until": $widescreen), "until-widescreen": ("until": $widescreen), "widescreen": ("from": $widescreen), "widescreen-only": ("from": $widescreen, "until": $fullhd), "until-fullhd": ("until": $fullhd), "fullhd": ("from": $fullhd)) !default;
