--- a/_sass/yolo/themes/_eightyfour.scss
+++ b/_sass/yolo/themes/_eightyfour.scss
@@ -5,12 +5,12 @@ $base-color: #272336 !default;
 $secondary-color: #0eb553 !default;
 
 $background-color: $base-color;
-$background-color-darker: #181623 !default;
+$background-darker-color: #181623 !default;
 
 $accent-color: #851bf2 !default;
 
 $code-background-color: #00080f !default;
 
-$text-color-alt: #f2891e !default;
+$text-secondary-color: #f2891e !default;
 $text-color: #23e5ab !default;
 $header-text-color: #f2286f !default;
