WIP, removing image-grid, using flexbox

--- a/_sass/yolo/_images.scss
+++ b/_sass/yolo/_images.scss
@@ -158,7 +158,7 @@ img {
 .image-item {
   border: none;
   border-radius: 0.5em;
-  padding: .2em;
+  padding: .5rem 0;
 }
 
 // ----------------------------------------------------------------------------
