--- a/_includes/image/flexbox.html
+++ b/_includes/image/flexbox.html
@@ -1,9 +1,9 @@
 {% assign numImages = site.data.images.size %}
 {% assign imagesPerColumn = numImages | divided_by: 4 | minus: 1 %}
 {% assign imagesRemainder = numImages | modulo: 4 %}
-<div class="image-row">
+<div class="columns">
     {% for i in (0..3) %}
-    <div class="image-column">
+    <div class="column">
         {% for j in (0..imagesPerColumn) %}
         {% assign offset = i | times: imagesPerColumn %}
         {% assign idx = i | plus: j | plus: offset %}
