table style edit, bump version

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -16,25 +16,25 @@
 
 <ul class="no-bullets">
     <li class="is-family-primary is-size-7">
-        This is x-small text.
+        This is-size-7 text.
     </li>
     <li class="is-family-primary is-size-6">
-        This is small text.
+        This is-size-6 text.
     </li>
     <li class="is-family-primary is-size-5">
-        This is medium text.
+        This is-size-5 text.
     </li>
     <li class="is-family-primary is-size-4">
-        This is large text.
+        This is-size-4 text.
     </li>
     <li class="is-family-primary is-size-3">
-        This is x-large text.
+        This is-size-3 text.
     </li>
     <li class="is-family-primary is-size-2">
-        This is xx-large text.
+        This is-size-2 text.
     </li>
     <li class="is-family-primary is-size-1">
-        This is xxx-large text.
+        This is-size-1 text.
     </li>
 </ul>
 
@@ -42,25 +42,25 @@
 
 <ul class="no-bullets">
     <li class="is-family-secondary is-size-7">
-        This is x-small text.
+        This is-size-7 text.
     </li>
     <li class="is-family-secondary is-size-6">
-        This is small text.
+        This is-size-6 text.
     </li>
     <li class="is-family-secondary is-size-5">
-        This is medium text.
+        This is-size-5 text.
     </li>
     <li class="is-family-secondary is-size-4">
-        This is large text.
+        This is-size-4 text.
     </li>
     <li class="is-family-secondary is-size-3">
-        This is x-large text.
+        This is-size-3 text.
     </li>
     <li class="is-family-secondary is-size-2">
-        This is xx-large text.
+        This is-size-2 text.
     </li>
     <li class="is-family-secondary is-size-1">
-        This is xxx-large text.
+        This is-size-1 text.
     </li>
 </ul>
 
@@ -68,24 +68,24 @@
 
 <ul class="no-bullets">
     <li class="is-family-monospace is-size-7">
-        This is x-small text.
+        This is-size-7 text.
     </li>
     <li class="is-family-monospace is-size-6">
-        This is small text.
+        This is-size-6 text.
     </li>
     <li class="is-family-monospace is-size-5">
-        This is medium text.
+        This is-size-5 text.
     </li>
     <li class="is-family-monospace is-size-4">
-        This is large text.
+        This is-size-4 text.
     </li>
     <li class="is-family-monospace is-size-3">
-        This is x-large text.
+        This is-size-3 text.
     </li>
     <li class="is-family-monospace is-size-2">
-        This is xx-large text.
+        This is-size-2 text.
     </li>
     <li class="is-family-monospace is-size-1">
-        This is xxx-large text.
+        This is-size-1 text.
     </li>
 </ul>
