--- a/_sass/yolo/_tables.scss
+++ b/_sass/yolo/_tables.scss
@@ -1,13 +1,38 @@
-/* ==========================================================================
-   Tables
-   ========================================================================== */
+// ----------------------------------------------------------------------------
+// Table styling
+// ----------------------------------------------------------------------------
 table {
   width: 100%;
   border: 1px solid $text-color;
   border-collapse: collapse;
 }
 
-td, th {
-  padding: .25rem .5rem;
+th {
+  padding: 0.3em;
+  text-align: left;
+  //border: 1px solid $text-color;
+}
+
+thead {
+  background: $text-color;
+  color: $background-color;
+}
+
+table th:first-child{
+  border-top-left-radius: .2em;
+}
+
+table th:last-child{
+  border-top-right-radius: .2em;
+}
+
+td {
+  padding: 0.3em;
   border: 1px solid $text-color;
+}
+
+tr,
+td,
+th {
+  vertical-align: middle;
 }
