--- a/_sass/yolo/_typography.scss
+++ b/_sass/yolo/_typography.scss
@@ -11,7 +11,7 @@ $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default;
   }
 }
 
-@include typography-size()
+@include typography-size();
 
 @include mobile {
   @include typography-size('mobile');
