organize js code into file, custom 404, responsive verification, theme verification, remove themesI dont want to maintain

--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -17,4 +17,6 @@
     <p>text-secondary-color</p>
     <div class="cell is-circle-64 header-text-color">&nbsp;</div>
     <p>header-text-color</p>
+    <div class="cell is-circle-64 text-code-color">&nbsp;</div>
+    <p>text-code-color</p>
 </div>
