--- a/_sass/yolo/themes/_blue.scss
+++ b/_sass/yolo/themes/_blue.scss
@@ -13,4 +13,5 @@ $code-background-color: #001740 !default;
 
 $text-secondary-color: #bbdefb !default;
 $text-color: #eeffff !default;
+$text-code-color: #65e9fc !default;
 $header-text-color: #42a5f5 !default;
