--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -13,4 +13,5 @@ $code-background-color: #061039 !default;
 
 $text-secondary-color: #c21d8a !default;
 $text-color: #ff31b9 !default;
+$text-code-color: #65e9fc !default;
 $header-text-color: #00e5ff !default;
