--- a/_sass/yolo/themes/_default.scss
+++ b/_sass/yolo/themes/_default.scss
@@ -13,4 +13,5 @@ $code-background-color: #000 !default;
 
 $text-secondary-color: #121f5c !default;
 $text-color: #001729 !default;
+$text-code-color: #01171b !default;
 $header-text-color: #180440 !default;
