--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -2,7 +2,7 @@
 // arcade theme
 // ----------------------------------------------------------------------------
 $base-color: #000928 !default;
-$secondary-color: #7254dc !default;
+$secondary-color: #3e1d9d !default;
 
 $background-color: $base-color;
 $background-darker-color: #00080f !default;
@@ -13,4 +13,5 @@ $code-background-color: #00080f !default;
 
 $text-secondary-color: #ff31b9 !default;
 $text-color: #adfff5 !default;
+$text-code-color: #65e9fc !default;
 $header-text-color: #0ad276 !default;
