--- a/_sass/yolo/themes/_green.scss
+++ b/_sass/yolo/themes/_green.scss
@@ -1,16 +1,17 @@
 // ----------------------------------------------------------------------------
 // green theme
 // ----------------------------------------------------------------------------
-$base-color: #0c6319 !default;
+$base-color: #cbfce0 !default;
 $secondary-color: #11b650 !default;
 
 $background-color: $base-color;
-$background-darker-color: #1b5e20 !default;
+$background-darker-color: #478568 !default;
 
-$accent-color: #ccff90 !default;
+$accent-color: #240e63 !default;
 
-$code-background-color: #0b3b0f !default;
+$code-background-color: #1d1d1d !default;
 
-$text-secondary-color: #b9f6ca !default;
-$text-color: #ecfffd !default;
-$header-text-color: #b9f6ca !default;
+$text-secondary-color: #08ab47 !default;
+$text-color: #028134 !default;
+$text-code-color: #b9f6ca !default;
+$header-text-color: #038233 !default;
