--- a/_sass/yolo/themes/_light.scss
+++ b/_sass/yolo/themes/_light.scss
@@ -13,4 +13,5 @@ $code-background-color: #000 !default;
 
 $text-secondary-color: #333 !default;
 $text-color: #000 !default;
+$text-code-color: #fff !default;
 $header-text-color: #000 !default;
