--- a/_sass/yolo/themes/_purple.scss
+++ b/_sass/yolo/themes/_purple.scss
@@ -13,4 +13,5 @@ $code-background-color: #0f052b !default;
 
 $text-secondary-color: #9868ee !default;
 $text-color: #ded5f7 !default;
+$text-code-color: #65e9fc !default;
 $header-text-color: #9869f8 !default;
