--- a/_sass/yolo/themes/_red.scss
+++ b/_sass/yolo/themes/_red.scss
@@ -1,16 +1,17 @@
 // ----------------------------------------------------------------------------
 // red theme
 // ----------------------------------------------------------------------------
-$base-color: #6d1212 !default;
-$secondary-color: #c80b2d !default;
+$base-color: #c80b2d !default;
+$secondary-color: #9365f1 !default;
 
 $background-color: $base-color;
 $background-darker-color: #5c0505 !default;
 
-$accent-color: #ff94c2 !default;
+$accent-color: #180440 !default;
 
 $code-background-color: #380101 !default;
 
 $text-secondary-color: #ff80ab !default;
 $text-color: #ffcdd2 !default;
-$header-text-color: #ff80a0 !default;
+$text-code-color: #feabcf !default;
+$header-text-color: #ffe9ea !default;
