--- a/_sass/yolo/themes/_soft.scss
+++ b/_sass/yolo/themes/_soft.scss
@@ -13,4 +13,5 @@ $code-background-color: #273239 !default;
 
 $text-secondary-color: #6a77c6 !default;
 $text-color: #556e7a !default;
+$text-code-color: #65e9fc !default;
 $header-text-color: #1279c7 !default;
