--- a/_sass/yolo/themes/_green.scss
+++ b/_sass/yolo/themes/_green.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // green theme
 // ----------------------------------------------------------------------------
-$base-color: #cbfce0 !default;
+$base-color: #e3feec !default;
 $secondary-color: #11b650 !default;
 
 $background-color: $base-color;
