--- a/_sass/yolo/themes/_light.scss
+++ b/_sass/yolo/themes/_light.scss
@@ -2,7 +2,7 @@
 // light theme
 // ----------------------------------------------------------------------------
 $base-color: #fff !default;
-$secondary-color: #6acfcb !default;
+$secondary-color: #11b650 !default;
 
 $background-color: $base-color;
 $background-darker-color: #ccc !default;
