--- a/_sass/yolo/themes/_dark.scss
+++ b/_sass/yolo/themes/_dark.scss
@@ -14,4 +14,4 @@ $code-background-color: $base-color !default;
 $text-secondary-color: #aaa !default;
 $text-color: #fff !default;
 $text-code-color: #65e9fc !default;
-$header-text-color: #aaa !default;
+$header-text-color: #ff31b9 !default;
