WIP image lightbox

--- a/_includes/image/lightbox.html
+++ b/_includes/image/lightbox.html
@@ -1,15 +1,23 @@
 <div class="columns">
     <div class="column">
-        <img src="assets/images/general/dairy-palace.png" onclick="openModal();currentSlide(1)" class="lb-hover-shadow">
+        <img src="assets/images/general/dairy-palace.png"
+             onclick="openModal();currentSlide(1)"
+             class="lb-square center lb-hover-shadow">
     </div>
     <div class="column">
-        <img src="assets/images/general/nacho.png" onclick="openModal();currentSlide(2)" class="lb-hover-shadow">
+        <img src="assets/images/general/nacho.png"
+             onclick="openModal();currentSlide(2)"
+             class="lb-square center lb-hover-shadow">
     </div>
     <div class="column">
-        <img src="assets/images/general/winter-tree.png" onclick="openModal();currentSlide(3)" class="lb-hover-shadow">
+        <img src="assets/images/general/macpro.png"
+             onclick="openModal();currentSlide(3)"
+             class="lb-square center lb-hover-shadow">
     </div>
     <div class="column">
-        <img src="assets/images/general/texas-evening.png" onclick="openModal();currentSlide(4)" class="lb-hover-shadow">
+        <img src="assets/images/general/porky.png"
+             onclick="openModal();currentSlide(4)"
+             class="lb-square center lb-hover-shadow">
     </div>
 </div>
 
@@ -17,25 +25,17 @@
 <div id="lb-myModal" class="lb-modal">
     <span class="lb-close cursor" onclick="closeModal()">&times;</span>
     <div class="lb-modal-content">
-
         <div class="lb-mySlides">
-            <div class="lb-numbertext">1 / 4</div>
-            <img src="assets/images/general/dairy-palace.png">
+            <img src="assets/images/general/dairy-palace.png" class="is-512 center">
         </div>
-
         <div class="lb-mySlides">
-            <div class="lb-numbertext">2 / 4</div>
-            <img src="assets/images/general/nacho.png">
+            <img src="assets/images/general/nacho.png" class="is-512 center">
         </div>
-
         <div class="lb-mySlides">
-            <div class="lb-numbertext">3 / 4</div>
-            <img src="assets/images/general/winter-tree.png">
+            <img src="assets/images/general/macpro.png" class="is-512 center">
         </div>
-
         <div class="lb-mySlides">
-            <div class="lb-numbertext">4 / 4</div>
-            <img src="assets/images/general/texas-evening.png">
+            <img src="assets/images/general/porky.png" class="is-512 center">
         </div>
 
         <!-- Next/previous controls -->
@@ -50,19 +50,20 @@
         <!-- Thumbnail image controls -->
         <div class="columns">
             <div class="column">
-                <img class="lb-demo" src="assets/images/general/dairy-palace.png" onclick="currentSlide(1)" alt="Dairy Palace, Canton Texas">
+                <img class="lb-square center lb-demo" src="assets/images/general/dairy-palace.png"
+                     onclick="currentSlide(1)" alt="Dairy Palace, Canton Texas">
             </div>
-
             <div class="column">
-                <img class="lb-demo" src="assets/images/general/nacho.png" onclick="currentSlide(2)" alt="Nachooooooo!!!">
+                <img class="lb-square center lb-demo" src="assets/images/general/nacho.png"
+                     onclick="currentSlide(2)" alt="Nachooooooo!!!">
             </div>
-
             <div class="column">
-                <img class="lb-demo" src="assets/images/general/winter-tree.png" onclick="currentSlide(3)" alt="Snow tree in Dallas">
+                <img class="lb-square center lb-demo" src="assets/images/general/macpro.png"
+                     onclick="currentSlide(3)" alt="Apple got me again...">
             </div>
-
             <div class="column">
-                <img class="lb-demo" src="assets/images/general/texas-evening.png" onclick="currentSlide(4)" alt="Justa good ole evening in Texas.">
+                <img class="lb-square center lb-demo" src="assets/images/general/porky.png"
+                     onclick="currentSlide(4)" alt="Porky makes some gooood BBQ!">
             </div>
         </div>
     </div>
