--- a/_includes/image/modal.html
+++ b/_includes/image/modal.html
@@ -1,5 +1,7 @@
-<div id="image-modal" class="image-modal">
-    <span class="image-modal-close">&times;</span>
-    <img class="image-modal-content" id="image-modal-content">
-    <div id="image-modal-caption"></div>
+<div class="container">
+    <div id="image-modal" class="image-modal">
+        <span class="image-modal-close">&times;</span>
+        <img class="image-modal-content" id="image-modal-content">
+        <div id="image-modal-caption"></div>
+    </div>
 </div>
