--- a/_sass/yolo/_lightbox.scss
+++ b/_sass/yolo/_lightbox.scss
@@ -1,6 +1,13 @@
 // ----------------------------------------------------------------------------
 // Styles for lightbox
 // ----------------------------------------------------------------------------
+.lb-square {
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 0.256em;
+}
+
 .lb-row > .lb-column {
   padding: .5rem;
 }
@@ -77,7 +84,7 @@
 .lb-next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  //top: 50%;
   width: auto;
   padding: 16px;
   margin-top: -50px;
@@ -102,21 +109,13 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Number text (1/3 etc) */
-.lb-numbertext {
-  color: $text-color;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
 /* Caption text */
 .lb-caption-container {
   text-align: center;
-  background-color: $background-darker-color;;
-  padding: 2px 16px;
+  background-color: $background-darker-color;
   color: $text-color;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 img.lb-demo {
