WIP lightbox functional

--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // corbs theme
 // ----------------------------------------------------------------------------
-$base-color: #04147e !default;
+$base-color: #000d55 !default;
 $secondary-color: #342077 !default;
 
 $background-color: #030f4b;
