--- a/_includes/image/flexbox.html
+++ b/_includes/image/flexbox.html
@@ -1,7 +1,7 @@
 {% assign numImages = site.data.images.size %}
 {% assign imagesPerColumn = numImages | divided_by: 4 | minus: 1 %}
 {% assign imagesRemainder = numImages | modulo: 4 %}
-<div class="columns">
+<div class="columns is-centered">
     {% for i in (0..3) %}
     <div class="column">
         {% for j in (0..imagesPerColumn) %}
