--- a/_includes/image/lightbox.html
+++ b/_includes/image/lightbox.html
@@ -19,52 +19,78 @@
              onclick="openModal();currentSlide(4)"
              class="lb-square center lb-hover-shadow">
     </div>
+    <div class="column">
+        <img src="assets/images/general/guadalupe-mountains.png"
+             onclick="openModal();currentSlide(5)"
+             class="lb-square center lb-hover-shadow">
+    </div>
+    <div class="column">
+        <img src="assets/images/general/best-painting-ever.png"
+             onclick="openModal();currentSlide(6)"
+             class="lb-square center lb-hover-shadow">
+    </div>
+    <div class="column">
+        <img src="assets/images/general/devils-tower.png"
+             onclick="openModal();currentSlide(7)"
+             class="lb-square center lb-hover-shadow">
+    </div>
+    <div class="column">
+        <img src="assets/images/general/big-sky.png"
+             onclick="openModal();currentSlide(8)"
+             class="lb-square center lb-hover-shadow">
+    </div>
 </div>
 
 <!-- The lb-modal/Lightbox -->
-<div id="lb-myModal" class="lb-modal">
+<div id="lb-modal" class="lb-modal">
     <span class="lb-close cursor" onclick="closeModal()">&times;</span>
     <div class="lb-modal-content">
-        <div class="lb-mySlides">
-            <img src="assets/images/general/dairy-palace.png" class="is-512 center">
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/dairy-palace.png"
+                alt="Dairy Palace, Canton Texas.">
         </div>
-        <div class="lb-mySlides">
-            <img src="assets/images/general/nacho.png" class="is-512 center">
+        <div class="lb-slides">
+            <img class="lb-item center"
+                 src="assets/images/general/nacho.png"
+                alt="Nachooooooo!!!">
         </div>
-        <div class="lb-mySlides">
-            <img src="assets/images/general/macpro.png" class="is-512 center">
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/macpro.png"
+                alt="My new toy.">
         </div>
-        <div class="lb-mySlides">
-            <img src="assets/images/general/porky.png" class="is-512 center">
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/porky.png"
+                alt="Porky makes some good BBQ!">
         </div>
-
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/guadalupe-mountains.png"
+                alt="Guadalupe Mountains, Texas.">
+        </div>
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/best-painting-ever.png"
+                alt="Best painting ever.">
+        </div>
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/devils-tower.png"
+                alt="Devils Tower, Wyoming.">
+        </div>
+        <div class="lb-slides">
+            <img class="lb-item center"
+                src="assets/images/general/big-sky.png"
+                alt="Big Sky over Texas.">
+        </div>
         <!-- Next/previous controls -->
-        <a class="lb-prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="lb-next" onclick="plusSlides(1)">&#10095;</a>
-
+        <a class="lb-nav lb-prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="lb-nav lb-next" onclick="plusSlides(1)">&#10095;</a>
         <!-- Caption text -->
         <div class="lb-caption-container">
             <p id="lb-caption"></p>
-        </div>
-
-        <!-- Thumbnail image controls -->
-        <div class="columns">
-            <div class="column">
-                <img class="lb-square center lb-demo" src="assets/images/general/dairy-palace.png"
-                     onclick="currentSlide(1)" alt="Dairy Palace, Canton Texas">
-            </div>
-            <div class="column">
-                <img class="lb-square center lb-demo" src="assets/images/general/nacho.png"
-                     onclick="currentSlide(2)" alt="Nachooooooo!!!">
-            </div>
-            <div class="column">
-                <img class="lb-square center lb-demo" src="assets/images/general/macpro.png"
-                     onclick="currentSlide(3)" alt="Apple got me again...">
-            </div>
-            <div class="column">
-                <img class="lb-square center lb-demo" src="assets/images/general/porky.png"
-                     onclick="currentSlide(4)" alt="Porky makes some gooood BBQ!">
-            </div>
         </div>
     </div>
 </div>
