--- a/_sass/yolo/_images.scss
+++ b/_sass/yolo/_images.scss
@@ -150,8 +150,9 @@ img {
   margin: 1rem 0;
   position: relative;
   text-align: center;
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
 }
 
 // ----------------------------------------------------------------------------
