--- a/_sass/yolo/_lightbox.scss
+++ b/_sass/yolo/_lightbox.scss
@@ -8,31 +8,14 @@
   border-radius: 0.256em;
 }
 
-.lb-row > .lb-column {
-  padding: .5rem;
+.lb-item {
+  border-radius: 0.3rem;
+  margin: 1rem 0;
+  position: relative;
+  text-align: center;
+  width: 100%;
 }
 
-.lb-row > .lb-column:first-child {
-  padding-left: 0;
-}
-
-.lb-row > .lb-column:last-child {
-  padding-right: 0;
-}
-
-.lb-row:after {
-  content: "";
-  display: grid;
-  clear: both;
-}
-
-/* Create four equal lb-columns that floats next to each other */
-.lb-column {
-  float: left;
-  width: 25%;
-}
-
-/* The Modal (background) */
 .lb-modal {
   display: none;
   position: fixed;
@@ -46,17 +29,14 @@
   background-color: $background-darker-color;
 }
 
-/* lb-modal Content */
 .lb-modal-content {
   position: relative;
-  background-color: $background-darker-color;
   margin: auto;
   padding: 0;
   width: 80%;
   max-width: 100%;
 }
 
-/* The lb-close Button */
 .lb-close {
   position: absolute;
   top: 15px;
@@ -74,42 +54,55 @@
   cursor: pointer;
 }
 
-/* Hide the slides by default */
-.lb-mySlides {
+.lb-slides {
   display: none;
 }
 
-/* Next & previous buttons */
-.lb-prev,
-.lb-next {
-  cursor: pointer;
+.lb-nav {
   position: absolute;
-  //top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: $accent-color;
-  font-weight: bold;
-  font-size: 20px;
+  display: block;
+  top: 0;
+  bottom: 0;
+  width: 8%;
+  height: 100%;
+  color: transparent;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 50px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
+  &:before {
+    content: '';
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  &:hover {
+    background-color: rgba($background-darker-color, 0.3);
+    text-decoration: none;
+  }
 }
 
-/* Position the "next button" to the right */
-.lb-next {
+.lb-prev {
+  left: 0;
   right: 0;
-  border-radius: 3px 0 0 3px;
+  border-radius: .3rem 0 0 .3rem;
+  color: transparent;
+  &:hover {
+    color: $accent-color;
+  }
+}
+.lb-next {
+  left: 92%;
+  right: 100%;
+  border-radius: 0 .3rem .3rem 0;
+  color: transparent;
+  &:hover {
+    color: $accent-color;
+  }
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.lb-prev:hover,
-.lb-next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Caption text */
 .lb-caption-container {
   text-align: center;
   background-color: $background-darker-color;
