--- a/_sass/yolo/themes/_dallas.scss
+++ b/_sass/yolo/themes/_dallas.scss
@@ -4,7 +4,7 @@
 $base-color: #08020a !default;
 $secondary-color: #4113a6 !default;
 
-$background-color: #08020a;
+$background-color: #000928;
 $background-darker-color: #08020a !default;
 
 $accent-color: #28cc38 !default;
