--- a/_sass/yolo/themes/_light.scss
+++ b/_sass/yolo/themes/_light.scss
@@ -2,16 +2,16 @@
 // light theme
 // ----------------------------------------------------------------------------
 $base-color: #fff !default;
-$secondary-color: #11b650 !default;
+$secondary-color: #aea8a8 !default;
 
 $background-color: $base-color;
 $background-darker-color: #ccc !default;
 
-$accent-color: #1f56d8 !default;
+$accent-color: #4119a7 !default;
 
 $code-background-color: #000 !default;
 
 $text-secondary-color: #333 !default;
 $text-color: #000 !default;
-$text-code-color: #fff !default;
+$text-code-color: #8d8c8c !default;
 $header-text-color: #000 !default;
