--- a/_sass/yolo/_syntax.scss
+++ b/_sass/yolo/_syntax.scss
@@ -4,44 +4,21 @@
 
 pre, code {
   font-family: $family-monospace;
-  color: $text-code-color;
+  color: $yolo-code-primary-color;
 }
 
 pre {
   font-size: 0.8rem;
 }
 
-.code-header {
-  font-size: .8rem;
-  padding: .3rem;
-  vertical-align: middle;
-  width: 100%;
-  background-color: $background-darker-color;
-  color: $text-color;
-  border-top-left-radius: 0.2em;
-  border-top-right-radius: 0.2em;
-
-  &::before {
-    background-color: $background-darker-color;
-  }
-
-  &:is(.copied, :hover) {
-    background-color: $accent-color;
-    color: $background-darker-color;
-  }
-
-  &.copied {
-    background-color: $text-color;
-  }
-}
-
 div.highlighter-rouge,
 figure.highlight {
   position: relative;
   margin-bottom: 1em;
+  padding-top: 0.5em;
   border-bottom-right-radius: 0.3em;
   border-bottom-left-radius: 0.3em;
-  background: $code-background-color;
+  background: $yolo-code-background-color;
   color: $base05;
   font-family: $family-monospace;
   line-height: 1.8;
