--- a/_sass/yolo/themes/_dark.scss
+++ b/_sass/yolo/themes/_dark.scss
@@ -2,16 +2,16 @@
 // dark theme
 // ----------------------------------------------------------------------------
 $base-color: #000 !default;
-$secondary-color: #404040 !default;
+$secondary-color: #fff !default;
 
 $background-color: $base-color;
 $background-darker-color: $base-color !default;
 
-$accent-color: #00b0ff !default;
+$accent-color: #808080 !default;
 
 $code-background-color: $base-color !default;
 
 $text-secondary-color: #aaa !default;
 $text-color: #fff !default;
 $text-code-color: #65e9fc !default;
-$header-text-color: #ff31b9 !default;
+$header-text-color: #fff !default;
