--- a/css/main.scss
+++ b/css/main.scss
@@ -21,14 +21,34 @@
 
 .back-to-top {
   display: block;
-  color: $accent-color;
+  color: $yolo-accent-color;
   text-align: right;
   text-decoration: none;
 }
 
+.code-header {
+  width: 100%;
+  font-family: $family-secondary;
+  padding: 0.3em 0.3em 0.3em 0.4em;
+  vertical-align: middle;
+  background-color: $yolo-table-header-color;
+  color: $yolo-table-header-text-color;
+  border-top-left-radius: 0.3em;
+  border-top-right-radius: 0.3em;
+
+  &:is(.copied, :hover) {
+    background-color: $yolo-accent-color;
+    color: $yolo-dark-color;
+  }
+
+  &.copied {
+    background-color: $yolo-table-header-color;
+  }
+}
+
 .video {
   //text-align: center;
-  width:100%;
+  width: 100%;
   iframe {
     width: 300px;
     height: 533px;
@@ -40,8 +60,8 @@
 .pill {
   display: inline-flex;
   align-items: center;
-  background-color: $secondary-color;
-  color: $accent-color;
+  background-color: $yolo-pill-color;
+  color: $yolo-pill-text-color;
   font-family: $family-monospace;
   text-decoration: none;
   padding: 0.25rem 1rem;
@@ -50,8 +70,7 @@
 }
 
 .pill:hover {
-  background-color: $text-color;
-  color: $secondary-color;
+  background-color: $yolo-accent-color;
 }
 
 ul.no-bullets {
